# ChemHelp

./: .gitignore  CMakeLists.txt  README.md  build.sh  chemhelp_defines.h  chemhelp_functions.cpp  chemhelp_main.cpp  help-page.txt  install.sh  uninstall.sh
chemhelp_core/: CMakeLists.txt  chem_util.cpp  chem_util.h  chem_util_balance.cpp  compound.cpp  compound.h  element.cpp  element.h  frac.cpp  frac.h  reaction.cpp  reaction.h
